--- a/NotifyApp/src/main/resources/application.properties
+++ b/NotifyApp/src/main/resources/application.properties
@@ -5,6 +5,6 @@
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/mohStarter
-spring.datasource.username=root
-spring.datasource.password=doh_0WeHm12SSLm
+spring.datasource.username=tushar
+spring.datasource.password=Dk_24MkSuretrain
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
