--- a/NotifyApp/build.gradle
+++ b/NotifyApp/build.gradle
@@ -23,6 +23,9 @@ repositories {
 }
 
 dependencies {
+	compileOnly 'org.projectlombok:lombok'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	//runtimeOnly 'mysql:mysql-connector-java'
