--- a/NotifyApp/src/main/resources/application.properties
+++ b/NotifyApp/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/mohStarter
 spring.datasource.username=tushar
 spring.datasource.password=Dk_24MkSuretrain
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+##GRANT ALL ON *.* TO 't ushar'@'localhost' IDENTIFIED BY 'Dk_24MkSuretrain' WITH GRANT OPTION;
+
+local.server.port=8080
