app status repo, TODO DSL for find

--- a/NotifyApp/build.gradle
+++ b/NotifyApp/build.gradle
@@ -24,13 +24,19 @@ repositories {
 
 dependencies {
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	//runtimeOnly 'mysql:mysql-connector-java'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.1'
+
+	compileOnly 'javax:javaee-api:6.0'
+	//implementation 'com.querydsl:querydsl-mongodb:4.3.1'
+
+	//implementation 'com.querydsl:querydsl-apt:4.3.1'
 
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
