--- a/NotifyApp/src/main/resources/application.properties
+++ b/NotifyApp/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 ##GRANT ALL ON *.* TO 't ushar'@'localhost' IDENTIFIED BY 'Dk_24MkSuretrain' WITH GRANT OPTION;
 
-local.server.port=8080
+local.server.port=8081
+server.port=8081
